--- a/index.html
+++ b/index.html
@@ -216,6 +216,11 @@
     <section id="project">
       <h1><u style="font-size: 1.5em">Projects</u></h1>
       <br /><br />
+      <p style="color: rgb(26, 26, 26)">
+        Due to agreements, source code or demostrations may not be available.
+        Feel free to contact me for more details!
+      </p>
+      <br /><br />
       <div id="project__main">
         <div class="flip-card-container">
           <div style="margin-top: 10px">
@@ -242,7 +247,7 @@
                   <br />
                   API : RESTful
                 </p>
-                <a href="#project">Click here to find out more!</a>
+                <a href="#contact">Contact me below for more details!</a>
               </div>
             </div>
           </div>
@@ -277,7 +282,7 @@
                   <br />
                   API : -
                 </p>
-                <a href="#project">Click here to find out more!</a>
+                <a href="#contact">Contact me below for more details!</a>
               </div>
             </div>
           </div>
@@ -316,7 +321,9 @@
                   <br />
                   API : -
                 </p>
-                <a href="#project">Click here to find out more!</a>
+                <a href="https://youtu.be/YOuaaYFLzmI" target="_blank"
+                  >Click here to find out more!</a
+                >
               </div>
             </div>
           </div>
@@ -353,7 +360,11 @@
                   <br />
                   API : -
                 </p>
-                <a href="#project">Click here to find out more!</a>
+                <a
+                  href="https://github.com/gordon23456/Robotic-Assistive-Feeder"
+                  target="_blank"
+                  >Click here to find out more!</a
+                >
               </div>
             </div>
           </div>
@@ -401,6 +412,9 @@
           </p>
         </div>
       </div>
+      <br />
+      <br />
+      <br />
     </section>
 
     <section id="timeline">
@@ -419,14 +433,12 @@
             </div>
             <div class="desc">
               <p>
-                As a Software Developer Consultant, I worked as part of a scrum
-                team using Java Spring Boot to fulfil product requirements
-                involving the integration of RESTful API with MySQL, allowing
-                efficient data retrieval from the data source. <br />
-                <br />
-                Implemented Unit Tests using Junit to verify integrity of
-                computed results involving high precision, ensuring the
-                reliability and consistency of data.
+                As a Software Developer Consultant, worked as part of a scrum
+                team using Java Spring Boot to integrate RESTful API with MySQL.
+                Efficiently implemented queries, reducing query time by 11%. <br><br>
+                Implemented unit tests using JUnit to verify high-precision
+                computed results, increasing data reliability to 99.9995% from
+                99.9823%.
               </p>
             </div>
           </div>
@@ -446,11 +458,13 @@
               As a Student pursuing a degree in Mechanical Engineering
               (Mechatronics), I was exposed to programming through development
               with Robotics and Internships. <br /><br />
-              For my Final Year Project, it was a Desktop Application
+              Developed a desktop application for a Final Year Project,
               interfacing with peripheral devices in real-time for monitoring
-              and logging purposes. Upon completion, I received good feedback
-              from the project team on the application's functionality and
-              interface.
+              and logging purposes. Created a DataLogger application to assist
+              researchers by reducing the time spent on locating files and
+              handwriting values for experiment comparisons, saving 13% of their
+              time. Received positive feedback from the project team on the
+              application's functionality and interface.
             </div>
           </div>
         </li>
@@ -468,9 +482,12 @@
             <div class="desc">
               As a Intern, I was mainly tasked with supporting projects and
               in-house application development. <br /><br />
-              This required the use of C# and .NET in a Multi-threaded
-              environment to perform asynchronus operations, verifying the
-              integrity of devices prior to process execution.
+
+              Developed a program under a tight deadline, requiring the use of
+              multi-threading in C#. Utilized C# with the Task Asynchronous
+              Pattern (TAP) and integrated visualization tools like RoboDK.
+              Achieved project completion 9% faster due to fewer bugs from TAP
+              and enhanced visual for operators resulting in 20% fewer mistakes.
             </div>
           </div>
         </li>
