--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
               <p>
                 As a Software Developer Consultant, worked as part of a scrum
                 team using Java Spring Boot to integrate RESTful API with MySQL.
-                Efficiently implemented queries, reducing query time by 11%. <br><br>
+                Efficiently implemented queries, reducing query time by 11%. <br>
                 Implemented unit tests using JUnit to verify high-precision
                 computed results, increasing data reliability to 99.9995% from
                 99.9823%.
@@ -457,14 +457,11 @@
             <div class="desc">
               As a Student pursuing a degree in Mechanical Engineering
               (Mechatronics), I was exposed to programming through development
-              with Robotics and Internships. <br /><br />
-              Developed a desktop application for a Final Year Project,
-              interfacing with peripheral devices in real-time for monitoring
-              and logging purposes. Created a DataLogger application to assist
-              researchers by reducing the time spent on locating files and
-              handwriting values for experiment comparisons, saving 13% of their
-              time. Received positive feedback from the project team on the
-              application's functionality and interface.
+              with Robotics and Internships. <br />
+              <br>Developed Datalogging application to aid in experimentation and testing. It eliminated the need for locating files and handwriting values for comparisons, reducing overall time spent by 13%. 
+              Implementation of multi-threading for GUI, eliminating unresponsiveness during application execution.
+              <br>Received positive feedback from the project team on the application's functionality and interface.
+              
             </div>
           </div>
         </li>
