--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       <h1><u style="font-size: 1.5em">Projects</u></h1>
       <br /><br />
       <p style="color: rgb(26, 26, 26)">
-        Due to agreements, source code or demostrations may not be available.
+        Due to privacy, source code or demostrations may not be available.
         Feel free to contact me for more details!
       </p>
       <br /><br />
