Add security measure

--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
       <h1><u style="font-size: 1.5em">Projects</u></h1>
       <br /><br />
       <p style="color: rgb(26, 26, 26)">
-        Due to privacy, source code or demostrations may not be available.
-        Feel free to contact me for more details!
+        Due to privacy, source code or demostrations may not be available. Feel
+        free to contact me for more details!
       </p>
       <br /><br />
       <div id="project__main">
@@ -435,7 +435,8 @@
               <p>
                 As a Software Developer Consultant, worked as part of a scrum
                 team using Java Spring Boot to integrate RESTful API with MySQL.
-                Efficiently implemented queries, reducing query time by 11%. <br>
+                Efficiently implemented queries, reducing query time by 11%.
+                <br />
                 Implemented unit tests using JUnit to verify high-precision
                 computed results, increasing data reliability to 99.9995% from
                 99.9823%.
@@ -458,10 +459,13 @@
               As a Student pursuing a degree in Mechanical Engineering
               (Mechatronics), I was exposed to programming through development
               with Robotics and Internships. <br />
-              <br>Developed Datalogging application to aid in experimentation and testing. It eliminated the need for locating files and handwriting values for comparisons, reducing overall time spent by 13%. 
-              Implementation of multi-threading for GUI, eliminating unresponsiveness during application execution.
-              <br>Received positive feedback from the project team on the application's functionality and interface.
-              
+              <br />Developed Datalogging application to aid in experimentation
+              and testing. It eliminated the need for locating files and
+              handwriting values for comparisons, reducing overall time spent by
+              13%. Implementation of multi-threading for GUI, eliminating
+              unresponsiveness during application execution. <br />Received
+              positive feedback from the project team on the application's
+              functionality and interface.
             </div>
           </div>
         </li>
@@ -524,7 +528,16 @@
               placeholder="Enter your text here!"
             ></textarea>
           </p>
-
+          <br />
+          <!-- <button
+          id="button-blue"
+            class="g-recaptcha"
+            data-sitekey="6LeHIBEqAAAAACRKGBXNh53z1Mkj3FCaxvegskGx"
+            data-callback="onSubmit"
+            data-action="submit"
+          >
+            Submit
+          </button> -->
           <div class="submit">
             <input type="submit" id="button-blue" />
           </div>
@@ -553,5 +566,6 @@
     </section>
     <script src="./script.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
   </body>
 </html>
