--- a/index.html
+++ b/index.html
@@ -570,6 +570,7 @@
     <script src="https://www.google.com/recaptcha/api.js"></script>
     <script>
       function onSubmit(token) {
+        console.log(token);
         document.getElementById("contact-form").submit();
       }
     </script>
