--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
           </p>
           <br />
 
-          <button
+          <!-- <button
             class="g-recaptcha"
             data-sitekey="6LeHIBEqAAAAACRKGBXNh53z1Mkj3FCaxvegskGx"
             data-callback="onSubmit"
@@ -538,10 +538,10 @@
             id="button-blue"
           >
             Submit
-          </button>
-          <!-- <div class="submit">
+          </button> -->
+          <div class="submit">
             <input type="submit" id="button-blue" />
-          </div> -->
+          </div>
           <br />
           <p style="color: rgb(245, 245, 245)" id="error-message"></p>
           <p style="display: none" id="submitted"></p>
@@ -568,12 +568,12 @@
     <script src="./script.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://www.google.com/recaptcha/api.js"></script>
-    <script>
+    <!-- <script>
       function onSubmit(token) {
         preventDefault();
         console.log(token);
         document.getElementById("contact-form").submit();
       }
-    </script>
+    </script> -->
   </body>
 </html>
